@@ -1148,7 +1148,7 @@ void CPL_AddFile(CP_HPLAYLIST hPlaylist, const char* pcFilename)
 				(_strnicmp(pcFilename, CIC_FTPHEADER, sizeof(CIC_FTPHEADER) - 1) == 0))
 		{
 			// This playlist is located on the internet, so we have to download it.
-			hInternet = InternetOpen("CoolPlayer",
+			hInternet = InternetOpen(CP_COOLPLAYER,
 									 INTERNET_OPEN_TYPE_PRECONFIG,
 									 NULL, NULL, 0L);
 			                         
