@@ -199,7 +199,7 @@ BEGIN
     CONTROL         "Spin1",IDC_REMEMBERSKIN,"msctls_updown32",
                     UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | 
                     UDS_ARROWKEYS | UDS_NOTHOUSANDS,151,145,11,9
-    LTEXT           "Skinlist length",-1,156,145,46,11
+    LTEXT           "Skinlist length",-1,159,145,46,11
     PUSHBUTTON      "Flush",IDC_FLUSH_SKINLIST,205,143,32,15
     GROUPBOX        "Output",-1,7,171,236,48
     COMBOBOX        IDC_OUTPUT,15,182,222,81,CBS_DROPDOWNLIST | WS_TABSTOP
@@ -210,8 +210,8 @@ BEGIN
                     WS_TABSTOP,13,238,35,10
     EDITTEXT        IDC_LOADSKIN,51,236,136,15,ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "Open",IDC_SKINBUTTON,196,236,41,15
-    DEFPUSHBUTTON   "OK",IDOK,119,265,60,15
-    PUSHBUTTON      "Cancel",IDCANCEL,183,265,60,15
+    DEFPUSHBUTTON   "OK",IDOK,139,265,50,15
+    PUSHBUTTON      "Cancel",IDCANCEL,193,265,50,15
 END
 
 IDD_URL DIALOG DISCARDABLE  0, 0, 235, 82
@@ -224,8 +224,8 @@ BEGIN
                     IDC_URL_DESCRIPTION,44,7,184,24
     LTEXT           "&URL:",IDC_URL_STATIC,7,36,18,8
     EDITTEXT        IDC_URL,44,34,184,15,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDOK,98,62,60,15
-    PUSHBUTTON      "Cancel",IDCANCEL,168,62,60,15
+    DEFPUSHBUTTON   "OK",IDOK,124,62,50,15
+    PUSHBUTTON      "Cancel",IDCANCEL,178,62,50,15
 END
 
 IDD_QUICKFIND DIALOG DISCARDABLE  0, 0, 221, 116
